# blob-quickstart

./: README.md  blob-example.docx  blob_quickstart.py  pyproject.toml
